# code-sample

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
data/: city_ids_and_bounds.geojson
notebooks/: test.ipynb
sample/: osm_road_data.py  osm_road_generator.py  sentinel_cities_downloader.py  sentinel_downloader.py  stackstac_downloader.py  utils.py
tests/: test_osm_road_data.py  test_stackstac_downloader.py
