[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["Derek Rollend <derek.rollend@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
numpy = "<1.27"
geopandas = "<0.15"
matplotlib = "^3.9.2"
pandas = "^2.2.2"
rasterio = "^1.3.11"
xarray = "^2024.9.0"
rioxarray = "^0.17.0"
xarray-spatial = "^0.4.0"
dask = {extras = ["dataframe"], version = "^2024.9.0"}
tqdm = "^4.66.5"
pystac = "^1.10.1"
pystac-client = "^0.8.3"
stackstac = "^0.5.1"
osmnx = "^1.9.4"
networkx = "^3.3"
ipykernel = "^6.29.5"
folium = "^0.17.0"
mapclassify = "^2.8.0"
pre-commit = "^3.8.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"


[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
